Leo-change word

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <h1>Hi, We are Leo and Ben</h1>
-      <p>Welcome to our first project!</p>
+      <p>HALLOOO,Welcome to our first project!</p>
     </header>
   </body>
 </html>
