add two more elements

--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
     <header>
       <h1>Hi, We are Leo and Ben</h1>
       <p>HALLOOO,Welcome to our first project!!!</p>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor, vero ab
+        numquam optio repudiandae dolorem distinctio. Quod molestiae asperiores,
+        minima et impedit doloribus harum rerum id officiis architecto,
+        voluptatem enim. Voluptate tempora cum consectetur ipsam, voluptatem
+        iusto facilis blanditiis asperiores delectus dolorum quis, tempore
+        provident nemo, rem officiis nihil voluptatibus. Ducimus exercitationem
+        ratione earum ad impedit a quis minus iste.
+      </p>
     </header>
+
+    <main>
+      <h2>Level 2 Heading</h2>
+    </main>
   </body>
 </html>
