Leo changes part 2/2
last update probably

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Our First Colab Project</title>
+    <title>The Legends vs The Forgotten- Digital Archive</title>
   </head>
   <body>
     <header>
@@ -16,7 +16,16 @@
     <main>
       <h1>The Legends</h1>
       <br>
+
       <h2>Paolo Rossi</h2>
+      <img src="images/rossi-480.jpg" 
+      alt="A picture of Paolo Rossi playing."
+      width="480" height="360"
+      srcset="images/rossi-480.jpg  480w, 
+      images/rossi-960.jpg  960w, 
+      images/rossi-1440.jpg 1440w, 
+      images/rossi-1920.jpg 1920w" 
+>
       <p>Banned in 1980.</p>
       <p>Banned from a betting scandal and accused of fixing Italian soccer matches.</p>
       <p>3 year ban.</p>
@@ -26,6 +35,10 @@
       <br>
 
       <h2>Diego Maradona</h2>
+      <img src="images/maradona.jpg" 
+      alt="A picture of Maradona playing."
+      width="480" height="360"
+>
       <p>Banned in 1991.</p>
       <p>Tested positive for cocaine.</p>
       <p>15 months ban.</p>
@@ -34,6 +47,10 @@
       <br>
 
       <h2>Eric Cantona</h2>
+      <img src="images/cantona.jpg" 
+      alt="A picture of Cantona kung-fu' kicking a Crytsal Palace fan in the stands."
+      width="480" height="360"
+>
       <p>Banned in 1995.</p>
       <p>Dismissed off the field after kicking Richard Shaw of Crystal Palace when playing against him. Also kung-fu' kicking a
         Crystal Palance fan in the stands who was shouting at him when he was walking off.
@@ -45,6 +62,10 @@
       <br>
 
       <h2>Zinedine Zidane</h2>
+      <img src="images/zidane.jpg" 
+      alt="A picture of Zidane dribbling a ball."
+      width="480" height="360"
+>
       <p>Banned in 2006</p>
       <p>Headbutted Marco Matterazzi of the Italian team in the chest during the World Cup final between France and Italy.
       </p>
@@ -55,6 +76,10 @@
       <br>
 
       <h2>Luis Suárez</h2>
+      <img src="images/suarez.jpg" 
+      alt="A picture of Suarez after the events of biting another player during the game."
+      width="480" height="360"
+>
       <p>Banned in 2010, 2013, and 2014</p>
       <p>Banned for biting several times throughout his career</p>
       </p> 2010- Bit PSV’s Otman Bakkal’s shoulder </p>
@@ -96,7 +121,13 @@
       </fieldset>
       
       
-  
+      <br> <br> <br>
+      <h1>The Forgotten</h1>
+      <br> <br>
+
+
+
+
     </main>
   </body>
 </html>
