picture fix maybe?

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <br>
 
       <h2>Eric Cantona</h2>
-      <img src="images/cantona.jpg" 
+      <img src="images/ecantona.jpg" 
       alt="A picture of Cantona kung-fu' kicking a Crytsal Palace fan in the stands."
       width="480" height="360"
 >
