typo change- Leo

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 >
       <p>Banned in 1995.</p>
       <p>Dismissed off the field after kicking Richard Shaw of Crystal Palace when playing against him. Also kung-fu' kicking a
-        Crystal Palance fan in the stands who was shouting at him when he was walking off.
+        Crystal Palace fan in the stands who was shouting at him when he was walking off.
       </p>
       <p>8 months ban.</p>
       <p>Seen as still a LEGEND due to his unpredicted behavior that resulted in his ban and many Manchester United fans see him as 
