add "Forgotten Players"
add Mutu, Anelka, Ravel, Barton, and Nasri

--- a/index.html
+++ b/index.html
@@ -122,10 +122,195 @@
       
       
   <br> <br>
+  <!-- BEN -->
       <h1>The Forgotten</h1>
       <br> <br>
+      <!-- Adrian Mutu -->
+      <h2>Adrian Mutu</h2>      
+      <br>
+      <img src="./images/mutu-480.jpg" alt="A picture of Mutu playing for Chelsea" width="480" height="320" 
+      srcset="./images/mutu-1920.jpg 1920w,
+              ./images/mutu-1440.jpg 1440w,
+              ./images/mutu-960.jpg 960w,
+              ./images/mutu-480.jpg 480w">
+      <pre><figcaption>         A picture of Mutu playing for Chelsea</figcaption></pre>
+      <br>
+      <strong>Banned in 2004</strong>
+      <br>
+      <br>
+      <em><strong>Received a 7-month ban</strong> and was released by the club.</em>
+      <br>
+      <ul>
+        <li>Once one of the most exciting attacking talents in Europe, Mutu's career took a turn when he <strong>tested positive for <abbr title="A highly addictive stimulant drug that is banned in professional sports.">cocaine</abbr></strong> while playing for Chelsea.</li>
+        <li>FIFA later ordered him to <strong>pay Chelsea <abbr title="one of the highest fines ever given to a footballer">€17 million</abbr> in damages</strong>, one of the highest fines ever given to a footballer.</li>
+        <li>He continued playing in <abbr title="The top-tier football league in Italy">Serie A</abbr> and Romania but never reached his full potential again, fading into obscurity.</li>
+      </ul>
+      <details>
+        <summary>📌 <strong>Clubs Played</strong></summary>
+        <ul>
+          <li>1999–2000 – Inter Milan</li>
+          <li>2000–2002 – Verona</li>
+          <li>2002–2003 – Parma</li>
+          <li>2003–2004 – Chelsea</li>
+          <li>2005–2006 – Juventus</li>
+          <li>2006–2011 – Fiorentina</li>
+          <li>2011–2012 – Cesena</li>
+          <li>2012–2013 – Ajaccio</li>
+          <li>2013–2014 – Petrolul Ploiești</li>
+          <li>2015 – Pune City</li>
+          <li>2016 – ASA Târgu Mureș</li>
+        </ul>
+      </details>
 
 
+      <!-- Nicolas Anelka -->
+      <h2>Nicolas Anelka</h2>      
+      <br>
+      <img src="./images/anelka-480.jpg" alt="A picture of Anelka playing for France." width="480" height="320" 
+      srcset="./images/anelka-1920.jpg 1920w,
+              ./images/anelka-1440.jpg 1440w,
+              ./images/anelka-960.jpg 960w,
+              ./images/anelka-480.jpg 480w">
+      <pre><figcaption>         A picture of Anelka playing for France.</figcaption></pre>
+      <br>
+      <strong>Banned in 2010</strong>
+      <br>
+      <br>
+      <em><strong>The <abbr title="French Football Federation, the governing body of soccer in France">FFF</abbr> banned him for 18 international matches</strong>, effectively ending his international career.</em>
+      <br>
+      <ul>
+        <li>Known for his controversial attitude, Anelka had a <strong>career full of <abbr title="A player moving from one club to another, often due to transfers or disagreements">club changes</abbr></strong> and disputes with managers.</li>
+        <li>His biggest downfall came in the 2010 World Cup when he <strong>insulted France’s coach, <abbr title="the head coach of the French national team from 2004-2010">Raymond Domenech</abbr></strong>, during a halftime team talk.</li>
+        <li>Later, he faced another scandal at West Brom for making a <strong><abbr title="A controversial hand gesture associated with antisemitism">"quenelle" gesture</abbr></strong>, considered antisemitic, leading to his release from the club.</li>
+        <li>After bouncing around minor leagues, he quietly retired.</li>
+      </ul>
+      <details>
+        <summary>📌 <strong>Clubs Played</strong></summary>
+        <ul>
+          <li>1996–1997 – Paris Saint-Germain</li>
+          <li>1997–1999 – Arsenal</li>
+          <li>1999–2000 – Real Madrid</li>
+          <li>2000–2002 – Paris Saint-Germain</li>
+          <li>2001–2002 – Liverpool (loan)</li>
+          <li>2002–2005 – Manchester City</li>
+          <li>2005–2006 – Fenerbahçe</li>
+          <li>2006–2008 – Bolton Wanderers</li>
+          <li>2008–2012 – Chelsea</li>
+          <li>2012 – Shanghai Shenhua</li>
+          <li>2013 – Juventus (loan)</li>
+          <li>2013–2014 – West Bromwich Albion</li>
+          <li>2015 – Mumbai City</li>
+        </ul>
+      </details>
+
+      <!-- Ravel Morrison -->
+      <h2>Ravel Morrison</h2>      
+      <br>
+      <img src="./images/ravel-480.jpg" alt="A picture of Morrison at Manchester United." width="480" height="321" 
+      srcset="./images/ravel-1920.jpg 1920w,
+              ./images/ravel-1440.jpg 1440w,
+              ./images/ravel-960.jpg 960w,
+              ./images/ravel-480.jpg 480w">
+      <pre><figcaption>       A picture of Morrison at <abbr title="one of the biggest football clubs in England">Manchester United</abbr>.</figcaption></pre>
+      <br>
+      <strong>Banned (effectively) in 2012.</strong>
+      <br>
+      <br>
+      <em>Though <strong>not officially banned</strong>, his reputation meant he was repeatedly dropped or frozen out by multiple clubs.</em>
+      <br>
+      <ul>
+        <li>Once seen as the <strong>best talent of Manchester United’s academy</strong>, Sir Alex Ferguson had high hopes for him.</li>
+        <li>However, <strong>off-field problems, including legal issues and a bad attitude</strong>, led to his departure from United in 2012.</li>
+        <li>Played for teams across England, Italy, Sweden, Mexico, and the Netherlands, but never settled anywhere.</li>
+        <li>Once a future England star, he is now completely forgotten in the football world.</li>
+      </ul>
+      <details>
+        <summary>📌 <strong>Clubs Played</strong></summary>
+        <ul>
+          <li>2010–2012 – Manchester United</li>
+          <li>2012–2015 – West Ham United</li>
+          <li>2014 – Birmingham City (loan)</li>
+          <li>2014 – Queens Park Rangers (loan)</li>
+          <li>2014–2015 – Cardiff City (loan)</li>
+          <li>2015–2019 – Lazio</li>
+          <li>2017 – Queens Park Rangers (loan)</li>
+          <li>2017–2018 – Atlas (loan)</li>
+          <li>2019 – Östersund</li>
+          <li>2019–2020 – Sheffield United</li>
+          <li>2020 – Middlesbrough (loan)</li>
+          <li>2020–2021 – ADO Den Haag</li>
+          <li>2021 – Derby County</li>
+          <li>2022–2023 – D.C. United</li>
+        </ul>
+      </details>
+
+      <!-- Joey Barton -->
+      <h2>Joey Barton</h2>      
+      <br>
+      <img src="./images/barton-480.jpg" alt="A picture of Barton playing for Burnley." width="480" height="270" 
+      srcset="./images/barton-1920.jpg 1920w,
+              ./images/barton-1440.jpg 1440w,
+              ./images/barton-960.jpg 960w,
+              ./images/barton-480.jpg 480w">
+      <pre><figcaption>         A picture of Barton playing for Burnley.</figcaption></pre>
+      <br>
+      <strong>Banned in 2017.</strong>
+      <br>
+      <br>
+      <em><strong>Received an 18-month ban</strong>, which effectively ended his playing career.</em>
+      <br>
+      <ul>
+        <li>A talented but aggressive midfielder, Barton was always in the headlines for the wrong reasons.</li>
+        <li>Found guilty of <strong>placing over 1,200 bets</strong> on football matches, breaking strict betting rules.</li>
+        <li>Previously had multiple <strong>assault charges, violent outbursts, and conflicts with teammates and coaches.</strong></li>
+        <li>After the ban, he attempted a coaching career but remains more known for controversies than his footballing ability.</li>
+      </ul>
+      <details>
+        <summary>📌 <strong>Clubs Played</strong></summary>
+        <ul>
+          <li>2002–2007 – Manchester City</li>
+          <li>2007–2011 – Newcastle United</li>
+          <li>2011–2018 – Queens Park Rangers</li>
+          <li>2012–2013 – Marseille (loan)</li>
+          <li>2015–2016 – Burnley</li>
+          <li>2016 – Rangers</li>
+          <li>2017 – Burnley</li>
+        </ul>
+      </details>
+
+      <!-- Samir Nasri -->
+      <h2>Samir Nasri</h2>      
+      <br>
+      <img src="./images/nasri-480.jpg" alt="A picture of Nasri playing for Manchester City." width="480" height="270" 
+      srcset="./images/nasri-1920.jpg 1920w,
+              ./images/nasri-1440.jpg 1440w,
+              ./images/nasri-960.jpg 960w,
+              ./images/nasri-480.jpg 480w">
+      <pre><figcaption>     A picture of Nasri playing for Manchester City.</figcaption></pre>
+      <br>
+      <strong>Banned in 2018.</strong>
+      <br>
+      <br>
+      <em><strong>Banned for 6 months, later extended to 18 months</strong>, significantly impacting his career.</em>
+      <br>
+      <ul>
+        <li>Once a key player for Arsenal and Manchester City, Nasri was known for his skillful dribbling and creativity.</li>
+        <li>His downfall came in 2018 when he <strong>received an <abbr title="Intravenous therapy – direct injection of fluids into veins, which can be illegal in sports if it exceeds limits.">illegal IV</abbr></strong> treatment exceeding the allowed limit.</li>
+        <li>Attempted a comeback but was <strong>out of shape and unmotivated</strong>, leading to an early retirement.</li>
+        <li>His name faded from football discussions despite once being considered a future superstar.</li>
+      </ul>
+      <details>
+        <summary>📌 <strong>Clubs Played</strong></summary>
+        <ul>
+          <li>2004–2008 – Marseille</li>
+          <li>2008–2011 – Arsenal</li>
+          <li>2011–2017 – Manchester City</li>
+          <li>2016–2017 – Sevilla (loan)</li>
+          <li>2017–2018 – Antalyaspor</li>
+          <li>2019 – West Ham United</li>
+          <li>2019–2020 – Anderlecht</li>
+        </ul>
+      </details>
 
 
     </main>
